assets/custom-styles.css
/* ... */
.ymc-smart-filter-container .filter-layout3 div.dropdown-filter:nth-child(6){
  display: flex!important;
}
@media only screen and (max-width: 1024px) {
  /* .ymc-smart-filter-container .filter-layout3 div:nth-child(6){
    display: none!important;
  } */
}
.ymc-smart-filter-container .filter-layout3 div:nth-child(6) {
  grid-column: 1 / span 1;
  grid-row: 6 / span 1;
}
.ymc-smart-filter-container .filter-layout3 div:nth-child(7) {
  grid-column: 2 / span 4;
  grid-row: 6 / span 1;
}
@media only screen and (max-width: 1024px) {
  .ymc-smart-filter-container .filter-layout3 div:nth-child(1) {
    grid-column: 1 / span 4;
    grid-row: 1 / span 1;
  }
  .ymc-smart-filter-container .filter-layout3 div:nth-child(2) {
    grid-column: 1 / span 4;
    grid-row: 2 / span 1;
  }
  .ymc-smart-filter-container .filter-layout3 div:nth-child(3) {
    grid-column: 1 / span 4;
    grid-row: 3 / span 1;
  }
  .ymc-smart-filter-container .filter-layout3 div:nth-child(4) {
    grid-column: 1 / span 4;
    grid-row: 4 / span 1;
  }
  .ymc-smart-filter-container .filter-layout3 div:nth-child(5) {
    grid-column: 1 / span 4;
    grid-row: 5 / span 1;
  }
  .ymc-smart-filter-container .filter-layout3 div:nth-child(8) {
    grid-column: 1 / span 4;
    grid-row: 6 / span 1;
  }
  .ymc-smart-filter-container .filter-layout3 div:nth-child(9) {
    grid-column: 1 / span 4;
    grid-row: 7 / span 1;
  }
  .ymc-smart-filter-container .filter-layout3 div:nth-child(10) {
    grid-column: 1 / span 4;
    grid-row: 8 / span 1;
  }
  .ymc-smart-filter-container .filter-layout3 div:nth-child(11) {
    grid-column: 1 / span 4;
    grid-row: 8 / span 1;
  }
  .ymc-smart-filter-container .filter-layout3 div:nth-child(12) {
    grid-column: 1 / span 4;
    grid-row: 9 / span 1;
  }
  .ymc-smart-filter-container .filter-layout3 div:nth-child(13) {
    grid-column: 1 / span 4;
    grid-row: 10 / span 1;
  }
  .ymc-smart-filter-container .filter-layout3 div:nth-child(14) {
    grid-column: 1 / span 4;
    grid-row: 11 / span 1;
  }
}
.ymc-smart-filter-container .filter-layout3 div:nth-child(9),
.ymc-smart-filter-container .filter-layout3 div:nth-child(10),
.ymc-smart-filter-container .filter-layout3 div:nth-child(11),
.ymc-smart-filter-container .filter-layout3 div:nth-child(12),
.ymc-smart-filter-container .filter-layout3 div:nth-child(13),
.ymc-smart-filter-container .filter-layout3 div:nth-child(14){
  opacity:0;
  transition: opacity 0.3s ease;
}
@media only screen and (max-width: 1024px) {
  .ymc-smart-filter-container .filter-layout3 div:nth-child(9),
  .ymc-smart-filter-container .filter-layout3 div:nth-child(10),
  .ymc-smart-filter-container .filter-layout3 div:nth-child(11),
  .ymc-smart-filter-container .filter-layout3 div:nth-child(12),
  .ymc-smart-filter-container .filter-layout3 div:nth-child(13),
  .ymc-smart-filter-container .filter-layout3 div:nth-child(14){
    opacity:1;
    transition: opacity 0.3s ease;
  }
}

@media only screen and (min-width: 1024px) {
  .ymc-smart-filter-container .filter-layout3 div:nth-child(6){
    grid-column: auto;
    grid-row: auto;
  }
  .ymc-smart-filter-container .filter-layout3 div:nth-child(7) {
    grid-column: auto;
    grid-row: auto;
  }
  .ymc-smart-filter-container .filter-layout3 div.dropdown-filter:nth-child(9) {
    grid-column: 1 / 3;
    z-index: 0;
    pointer-events: none;
  }
  .ymc-smart-filter-container .filter-layout3 div.dropdown-filter:nth-child(10){
    grid-column: 3 / 5;
    z-index: 0;
    pointer-events: none;
  }
  .ymc-smart-filter-container .filter-layout3 div.dropdown-filter:nth-child(12){
    grid-column: 5 / 6;
    z-index: 0;
    pointer-events: none;
  }
  .ymc-smart-filter-container .filter-layout3 div.dropdown-filter:nth-child(13){
    grid-column: 6 / 7;
    z-index: 0;
    pointer-events: none;
  }
  .ymc-smart-filter-container .filter-layout3 div.dropdown-filter:nth-child(14){
    grid-column: 7 / 8;
    z-index: 0;
    pointer-events: none;
  }
  .ymc-smart-filter-container .filter-layout3 div.dropdown-filter:nth-child(12) {
    margin-right: 0!important;
  }
  /* termin: */
  .ymc-smart-filter-container .filter-layout3 div.dropdown-filter:nth-child(13) {
    border-right: 2px solid #ebeef2;
  }
  .ymc-smart-filter-container .filter-layout3 div.dropdown-filter:nth-child(13) > p {
    padding-bottom: 0px!important;
    padding-top: 16px!important;
  }
  @media only screen and (min-width: 1441px) {
    .ymc-smart-filter-container .filter-layout3 div.dropdown-filter:nth-child(13) > p {
      padding-bottom: 20px!important;
      padding-top: 20px!important;
    }
  }

  .ymc-smart-filter-container .filter-layout3 div.dropdown-filter:nth-child(14) {
    border-right: 2px solid white;
  }
}

#filter-layout3-filter-layout3 .js-heightAnimation{
  height: 540px;
  transition: height 0.3s ease-out;
}

#filter-layout3-filter-layout3 .js-heightAnimation.transitioning{
  overflow: hidden !important;
}

#filter-layout3-filter-layout3 .js-heightAnimation.expanded{
  overflow: visible;
  height: 1000px;
}

#filter-layout3-filter-layout3 .filter-entry {
  position: relative;
  /* z-index: 2; */
  height: 990px;
}

@media only screen and (min-width: 1024px) {
  #filter-layout3-filter-layout3 .js-heightAnimation{
    height: 120px;
  }
  #filter-layout3-filter-layout3 .js-heightAnimation.expanded{
    height: 240px;
  }
  #filter-layout3-filter-layout3 .filter-entry {
    height: 240px;
  }
}

#filter-layout3-filter-layout3 .js-heightAnimation .filter-entry .btn-search ~ div {
  pointer-events: none;
  z-index: 3;
}

#filter-layout3-filter-layout3 .js-heightAnimation:not(.expanded) .filter-entry .btn-search ~ div {
  pointer-events: none;
  opacity: 0;
}

#filter-layout3-filter-layout3 .js-heightAnimation.expanded .filter-entry .btn-search ~ div {
  opacity: 100%;
  pointer-events: all;
}
/* ... */

